--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,20 @@
     <string name="action_refresh">Refresh</string>
     <string name="title_activity_detail">DetailActivity</string>
     <string name="title_activity_settings">SettingsActivity</string>
+    <!-- Label for the location preference [CHAR LIMIT=30] -->
+    <string name="pref_location_label">Location</string>
+    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
+    <string name="pref_location_key" translatable="false">location</string>
+    <!-- Default query string for location preference [CHAR LIMIT=NONE] -->
+    <string name="pref_location_default" translatable="false">Gdansk</string>
+
+    <string name="pref_unit_key" translatable="false">unit</string>
+    <string name="pref_unit_label">Unit</string>
+    <string name="pref_unit_default" translatable="false">metric</string>
+
+
+    <string name="action_show_location">Show location</string>
+    <string name="no_map_app">No map app on the device found</string>
+    <string name="action_share">Share</string>
+    <string name="share_hashtag">#SunshineApp</string>
 </resources>
